--- a/create.html
+++ b/create.html
@@ -1,6 +1,7 @@
 a<!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="styles.css">
   <meta charset="UTF-8" />
   <title>skillEX – Create Listing</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
